# Calliope

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  forensics.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  pr-branch.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  remove-workspace.md  (+15 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planning-config.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  do.md  execute-phase.md  execute-plan.md  health.md  help.md  insert-phase.md  list-workspaces.md  manager.md  map-codebase.md  new-milestone.md  new-project.md  new-workspace.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  profile-user.md  progress.md  quick.md  remove-phase.md  remove-workspace.md  research-phase.md  resume-project.md  review.md  settings.md  (+9 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-build-system-app-shell/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-audio-engine-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-command-dispatcher-state/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-instruments/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-effects-processing/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-timeline-arrangement/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-UI-SPEC.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-piano-roll/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-UI-SPEC.md  07-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
engine/: CMakeLists.txt
engine/include/calliope/: audio_exporter.h  audio_graph.h  clip_scheduler.h  command.h  command_dispatcher.h  engine.h  event_types.h  insert_chain.h  insert_chain_processor.h  lock_free_queue.h  master_bus.h  metronome.h  parameter_registry.h  project_serializer.h  project_state.h  transport.h
engine/include/calliope/commands/: effect_commands.h  instrument_commands.h  parameter_commands.h  transport_commands.h
engine/include/calliope/effects/: compressor.h  delay.h  limiter.h  parametric_eq.h  reverb.h
engine/include/calliope/instruments/: bass_synth.h  bass_synth_sound.h  bass_synth_voice.h  drum_machine.h  poly_synth.h  poly_synth_sound.h  poly_synth_voice.h
engine/src/: audio_exporter.cpp  audio_graph.cpp  clip_scheduler.cpp  command_dispatcher.cpp  engine.cpp  insert_chain.cpp  insert_chain_processor.cpp  master_bus.cpp  metronome.cpp  parameter_registry.cpp  project_serializer.cpp  project_state.cpp  test_tone.cpp  transport.cpp
engine/src/commands/: effect_commands.cpp  instrument_commands.cpp  parameter_commands.cpp  transport_commands.cpp
engine/src/effects/: compressor.cpp  delay.cpp  limiter.cpp  parametric_eq.cpp  reverb.cpp
engine/src/instruments/: bass_synth.cpp  bass_synth_voice.cpp  drum_machine.cpp  poly_synth.cpp  poly_synth_voice.cpp
engine/tests/: CMakeLists.txt  test_audio_exporter.cpp  test_audio_graph.cpp  test_bass_synth.cpp  test_clip_scheduler.cpp  test_command_dispatcher.cpp  test_drum_machine.cpp  test_effect_commands.cpp  test_effects.cpp  test_insert_chain.cpp  test_instrument_commands.cpp  test_lock_free_queue.cpp  test_main.cpp  test_metronome.cpp  test_parameter_commands.cpp  test_parameter_registry.cpp  test_poly_synth.cpp  test_project_state.cpp  test_transport.cpp  test_transport_commands.cpp
native/: CMakeLists.txt
native/src/: addon.cpp  bridge.cpp  bridge.h
test/: app.test.ts  beat-math.test.ts  clip-operations.test.ts  keyboard-shortcuts.test.ts  mixer-helpers.test.ts  mixer-store.test.ts  native.test.ts  note-operations.test.ts  piano-helpers.test.ts  piano-roll-store.test.ts  time-format.test.ts  timeline-store.test.ts  waveform-utils.test.ts
(+122 files in other folders)
